Throw exception on MediaStore createRequest for non-existent uri
CVE-Info: CVE-2026-0035 | Severity: High

Throw IllegalArgument exception if a caller requests
CREATE_WRITE/DELETE/.._REQUEST for a uri that does not exist in the
Files table at the time of request.

BUG: 418773439
Test: atest MediaProviderTests
Flag: EXEMPT bugfix
Cherrypick-From: https://googleplex-android-review.googlesource.com/q/commit:268fc3fb0a438abbc710687a9590cb80b3c0e8bc
Merged-In: I00a3b15d8dbcd19afaec3980f7d7a07122bef640
Change-Id: I00a3b15d8dbcd19afaec3980f7d7a07122bef640